[tool.poetry]
name = "sportlumos"
version = "0.1.0"
description = ""
authors = ["Jaime Valenzuela <jaime.vs@datalumino>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
plotly = "^5.22.0"
streamlit = "^1.34.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
